--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NOTION_KEY=secret_jvYR62S6GkE8MM0kpIG9HM7lBNG2vbPjzEmzR5Eeifo
-NOTION_DB_ID=85a9429ce2724544a8daca2de21388c1
+NOTION_KEY=secret_jvYR62S6GkE8MM0kpIG9HMIUYSUAHNS>ADLK
+NOTION_DB_ID=85a9429ce2724544a8daca2desdaoiuisodauo
